--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Página Principal</h1>
         <p>Primera página del curso de Desarrollo de aplicaciones Web y Patrones </p>
+        <p>Ultima línea</p>
     </body>
 </html>
