--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,8 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Página Principal</h1>
-        <p>Primera página del curso de Desarrollo de aplicaciones Web y Patrones </p>
-        <p>Ultima línea</p>
+        <h1>Home</h1>
+        <p>Bienvenidos al curso de Web y Patrones</p>
+        <p></p>
+        <br>
     </body>
 </html>
