semana 3 que se me olvido hacer el commit (lo hice pero no lo subi y lo de la semana 4)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,10 @@
         <title>TechShop</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+        <meta name="description" content="Esta pagina es del curso web y patrones">
+        <meta name="keywords0" content="html5, css3, fidelitas">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
+        </head>
     <body>
         <h1>Home</h1>
         <p>Bienvenidos al curso de Web y Patrones</p>
