semana6 mitad / se hace este commit para guardar datos realizados por error que esta dando sobre que no me crea una carpeta por defecto, para poder proceder a desintalar y volver a instaalar y ver si se puede arreglar mientras se espera la solucion del profesor /

--- a/src/main/resources/static/Ejemplo 4.html
+++ b/src/main/resources/static/Ejemplo 4.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <title>TODO supply a title</title>
@@ -6,11 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Ejemplo de Emcabezados</h1>
-        <h2>Ejemplo de nivel2</h2>
-        <h3>Ejemplo de nivel3</h3>
-        <h4>Ejemplo de nivel4</h4>
-        <h5>Ejemplo de nivel5</h5>
-        <h6>Ejemplo de nivel6</h6><!-- Llega hasta el 6-->
+        <h1> Ejemplo de encabezados</h1>
+        <h2> Ejemplo de nivel 2</h2>
+        <h3> Ejemplo de nivel 3</h3>
+        <h4> Ejemplo de nivel 4</h4>
+        <h5> Ejemplo de nivel 5</h5>
+        <h6> Ejemplo de nivel 6</h6><!-- Llega hasta el 6-->
+       
     </body>
 </html>
