--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,16 +9,15 @@
         <!--        description: podemos poder una descripción-->
         <meta name="description" content="Esta página es del curso de web">
         <!--    keywords:palabras para que el buscador las encuentre y las tome la página-->
-        <meta name="keywords" content="html5, css3, fidelitas">
+        <meta name="keywords" content="html5, css3">
         <link href="css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
-
     <body>
         <header class="header">
             <nav class="nav">
                 <a href="index.html" class="logo nav-link">TechShop</a>
                 <ul class="nav-menu">
-                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="index.html">&LeftTriangleBar;</a></li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="ejemplo9.html">&LeftTriangleBar;</a></li>
                     <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="ejemplo3.html">&RightTriangleBar;</a></li>
                     <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="audios.html">Audios</a></li>
                     <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="videos.html">Videos</a></li>
@@ -27,26 +26,21 @@
                 </ul>
             </nav>
         </header>
-
         <section id="contenido">
             <!--Encabezado o "H"eading--> 
-            <h1>Home</h1>
+            <h1> Home</h1>
             <!--Esto es el "p"árrafo--> 
-            <p>Bienvenidos al curso de Web y Patrones</p>
-            <br>
+            <p> Bienvenidos al curso de Web y Patrones</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit semper nullam, quam auctor eros ullamcorper neque proin sed fusce convallis metus, dis condimentum eleifend porta dictum fermentum commodo et. Vehicula neque conubia habitant luctus fermentum himenaeos duis per feugiat cras primis convallis vulputate, tempor vivamus faucibus parturient ligula quis molestie et fringilla orci lectus vel. Duis nostra risus pretium venenatis nisi curae potenti nibh eu, magnis suscipit volutpat sollicitudin dictumst eleifend enim penatibus urna dignissim, tortor nec posuere varius accumsan sem vel natoque. Magna fringilla gravida inceptos aptent metus nullam in nascetur id erat cum commodo consequat, potenti natoque maecenas taciti proin mus aliquam nisl viverra placerat tempor pellentesque.</p>
+            <p>Commodo velit risus tellus magnis laoreet suscipit convallis gravida ad ultrices molestie nam varius dictum ridiculus ligula, odio montes mus pellentesque vivamus facilisi porta integer a taciti ante sodales congue himenaeos. Sollicitudin a inceptos nam eleifend scelerisque metus litora felis rutrum parturient, eros senectus nostra est odio vitae taciti euismod vulputate tempus, dui laoreet sem dapibus consequat sapien id augue potenti. Sapien orci augue litora risus aptent feugiat ullamcorper himenaeos, iaculis leo inceptos ad id torquent habitasse mauris enim, aenean sociosqu netus nec sem integer proin. Nec vulputate magna mauris ut facilisi ad imperdiet porttitor accumsan, arcu fusce class tellus lectus pretium nibh integer habitasse, montes curae euismod fringilla ultrices tempor ullamcorper mi.</p>
+            <p>Pharetra velit primis sem iaculis vehicula gravida duis praesent, maecenas ultricies torquent nibh sociosqu auctor ridiculus, odio aliquet facilisis a cursus litora euismod. Condimentum sociis fringilla aptent nunc faucibus quis, sed sociosqu hendrerit varius facilisi, justo risus fermentum interdum nec. Viverra lacinia placerat tortor fames nibh quam luctus ridiculus maecenas himenaeos lobortis rhoncus aenean diam, eros aliquet purus tristique volutpat vestibulum eleifend at erat malesuada sed posuere bibendum. Nisl netus cursus rhoncus gravida molestie pulvinar inceptos fermentum cum aliquam, ligula habitant etiam tellus vivamus justo tristique fringilla augue, dignissim dui quisque sociosqu natoque eros sollicitudin malesuada donec.</p>
 
-            <a href="#">Ejemplo</a><br><br>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit curabitur blandit aenean, ornare gravida magnis pellentesque nibh cubilia iaculis massa aliquam, donec luctus inceptos est conubia venenatis eget sollicitudin viverra. Eu egestas volutpat penatibus cras fusce parturient nisl turpis senectus, primis a proin molestie integer facilisis sagittis habitant, rhoncus sem non facilisi mus dictum ornare mi. Est senectus justo laoreet quisque ullamcorper curae eu ante tortor pharetra molestie cum semper tincidunt magna, per morbi mollis montes aliquet parturient hac dui aenean dapibus aptent tristique gravida. Rutrum platea etiam hendrerit augue auctor mus vehicula, nec habitasse sociosqu elementum morbi tellus eu nullam, quam libero ultricies diam consequat et. Dictumst tortor accumsan eros vitae litora facilisi libero egestas penatibus, habitant placerat facilisis urna class diam tincidunt velit ultricies ornare, torquent nisl pretium morbi laoreet mauris risus dictum.</p>
-            <p>Egestas nec interdum eu tortor porta rutrum orci maecenas cras vulputate, commodo netus torquent malesuada mattis fermentum fusce mus tempor. Habitant odio mus urna viverra erat magna pharetra semper, per netus volutpat duis quisque eleifend felis lectus, placerat vivamus bibendum porttitor curabitur quam nisi. Nunc tristique sem dapibus fringilla pulvinar porta sagittis taciti, phasellus sociis ligula hendrerit habitant ad pellentesque, non ornare commodo viverra eget dignissim erat.</p>
-            <p>Lacus nascetur tempor ac gravida leo ullamcorper tristique, sem aptent primis turpis class iaculis natoque, netus nec etiam mi accumsan fermentum. Nisi nulla senectus quam facilisi dictumst aliquet, congue curae ullamcorper taciti a rutrum mus, suscipit diam cubilia nam vestibulum. Dictum mollis donec metus sed cubilia feugiat, nibh potenti leo integer volutpat augue conubia, tincidunt aenean placerat inceptos ante.</p>
             <!--br salto de línea--> 
             <br>
             <br>
-            <p>Última línea</p>
-
+            <br>
+            <p>Ultima Linea</p>
         </section>
-        <footer class="footer">Derechos reservados 2023 </footer>
-
-    </body>
+        <footer>Derechos reservados 2023</footer>
+    </body>
 </html>
