--- a/src/main/resources/static/Ejemplo3.html
+++ b/src/main/resources/static/Ejemplo3.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <title>TODO supply a title</title>
@@ -6,16 +7,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <!-- Esto es un comentario -->
-        <div style="color: greenyellow;text-align: center;">
-            <h1>Ejemplo 3</h1>
-            <p> <strong>Bienvenidos al curso de Web y Patrones</strong><!-- En negrita --></p>
-            <p> <u>Bienvenidos al curso de Web y Patrones</u><!-- Subrayado --></p>
-            <p> <i>Bienvenidos al curso de Web y Patrones</i><!-- italico?--></p>
-            
-            <p style="color: red;text-align: right;"> Maria Paola Ramirez Alfaro</p>
-            <br><!-- Esto es para espacio entre lineas -->
-        </div><!-- En globar elementos (hacerlo bloque)-->
+        <div>TODO write content</div><!-- Esto es un comentario -->
+        <h1 style="text-align:center;"> Ejemplo 3</h1>
+        <p> Bienvenidos al curso de Web y Patrones</p>
+        <p>Lorem ipsum <strong>dolor sit amet consectetur adipiscing</strong> elit semper nullam, quam auctor eros ullamcorper neque proin sed fusce convallis metus, dis condimentum eleifend porta dictum fermentum commodo et. Vehicula neque conubia habitant luctus fermentum himenaeos duis per feugiat cras primis convallis vulputate, tempor vivamus faucibus parturient ligula quis molestie et fringilla orci lectus vel. Duis nostra risus pretium venenatis nisi curae potenti nibh eu, magnis suscipit volutpat sollicitudin dictumst eleifend enim penatibus urna dignissim, tortor nec posuere varius accumsan sem vel natoque. Magna fringilla gravida inceptos aptent metus nullam in nascetur id erat cum commodo consequat, potenti natoque maecenas taciti proin mus aliquam nisl viverra placerat tempor pellentesque.</p>
+        <!-- En negrita -->
+        <p>Commodo <u>velit risus tellus magnis laoreet suscipit convallis </u>gravida ad ultrices molestie nam varius dictum ridiculus ligula, odio montes mus pellentesque vivamus facilisi porta integer a taciti ante sodales congue himenaeos. Sollicitudin a inceptos nam eleifend scelerisque metus litora felis rutrum parturient, eros senectus nostra est odio vitae taciti euismod vulputate tempus, dui laoreet sem dapibus consequat sapien id augue potenti. Sapien orci augue litora risus aptent feugiat ullamcorper himenaeos, iaculis leo inceptos ad id torquent habitasse mauris enim, aenean sociosqu netus nec sem integer proin. Nec vulputate magna mauris ut facilisi ad imperdiet porttitor accumsan, arcu fusce class tellus lectus pretium nibh integer habitasse, montes curae euismod fringilla ultrices tempor ullamcorper mi.</p>
+        <!-- Subrayado -->
+        <p>Pharetra velit <i>primis sem iaculis vehicula gravida duis praesent,</i> maecenas ultricies torquent nibh sociosqu auctor ridiculus, odio aliquet facilisis a cursus litora euismod. Condimentum sociis fringilla aptent nunc faucibus quis, sed sociosqu hendrerit varius facilisi, justo risus fermentum interdum nec. Viverra lacinia placerat tortor fames nibh quam luctus ridiculus maecenas himenaeos lobortis rhoncus aenean diam, eros aliquet purus tristique volutpat vestibulum eleifend at erat malesuada sed posuere bibendum. Nisl netus cursus rhoncus gravida molestie pulvinar inceptos fermentum cum aliquam, ligula habitant etiam tellus vivamus justo tristique fringilla augue, dignissim dui quisque sociosqu natoque eros sollicitudin malesuada donec.</p>
+        <!-- italico?-->
+        
+        <br>
+        <p style="color: red;text-align: right;"> Maria Paola Ramirez Alfaro</p>
+        <br>
+        <br><!-- Esto es para espacio entre lineas -->
+        <!-- (</div>) En globar elementos (hacerlo bloque)-->
         <p>Y es asi como se configura</p>
+        <br>
+        <p><strong><u><i>Ultima Linea</i></u></strong></p>
     </body>
 </html>
