--- a/src/main/resources/static/Ejemplo5.html
+++ b/src/main/resources/static/Ejemplo5.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <title>TODO supply a title</title>
@@ -9,9 +10,8 @@
         <h1>Ejemplo 5</h1>
         <br>
         <br>
-        <p> Lorem <span style="background-color: blue; color: white; font-size: 20px; font-family: Comic Sans Ms;"> ipsum dolor sit amet consectetur adipiscing elit euismod montes</span>, nibh ultricies fusce mauris sociosqu sed vulputate quis natoque pretium, tellus ut dictum torquent nam per rutrum nec. Ante sed venenatis in fusce himenaeos nostra netus, phasellus et interdum laoreet platea luctus leo, class auctor odio fringilla tellus enim.</p>
-        <p>La fórmula del agua es H<sub>2</sub>O</p>
-        <p>La primera Fórmula notable es :(a+b)<sub>2</sub> + 2ab + b<sub>2</sub></p>
-        <p></p>
+        <p>Elementum arcu rutrum <span style="background-color:blue ;color:white; font-size: 20px;font-family: Comic Sans MS;">nisl aptent nec vulputate per, gravida velit suspendisse augue est mollis euismod porta</span>, feugiat et aliquet fermentum odio nascetur. Placerat quam nibh phasellus vel curae sapien, lectus ultricies lacinia eros conubia, rhoncus sem lobortis diam sollicitudin. Justo habitant eleifend mattis natoque tristique dictum parturient cursus velit class ornare pulvinar enim, hendrerit per penatibus faucibus nisi ut lectus ultrices turpis orci torquent.</p>
+        <p>La formula del agua es H<sub>2</sub>O</p>
+        <p>La primera formula notable es:(a+b)<sub>2</sub> =a<sub>2</sub> +a<sub>2</sub> + 2ab + b<sub>2</sub></p>
     </body>
 </html>
