--- a/src/main/resources/static/Ejemplo9.html
+++ b/src/main/resources/static/Ejemplo9.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <h1 id="TituloPrincipal">Ejemplo 9</h1>
-        <br> 
-        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
-            <style>
-                .parrafoTercero{
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <style>
+            .parrafoSecundario{
                 color : coral;
                 font-size: 60px;
                 font-weight: bold;
-                }
-            </style>
-        <br> 
-        <a href="Ejemplo8.html">Ejemplo8</a>
-        <br> 
+            }
+        </style>
+    </head>
+    <body>
+        <h1 id="TituloPrincipal">Ejemplo 9</h1>
+        <br>
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
+        <br>
+
         <form action="#" >
-            <label> Nombre: </label>
-            <input type="text" name="nombre" id="nombre"/>
+            <label> Nombre:</label>
+            <input type="text" name="nombre" id="nombre" placeholder="Digite su nombre"/> 
             <br>
-            <label> Apellido: </label>
-            <input type="text" name="apellido" id="apellido"/>
+            <label> Apellidos:</label>
+            <input type="text" name="apellidos" id="apellidos"/> 
             <br>
-            <label> Password: </label>
-            <input type="Password" name="Password" id="Password" placeholder="Digite su Password"/>
+            <label> Password:</label>
+            <input type="password" name="password" id="password" placeholder="Digite su nombre"/> 
+
             <br>
-            <input type="submit" value="Enviar"/>
-            
-            
+            <input type="submit" value="enviar"/> 
+
         </form>
         <P class="PARRAFOSejemplo">PRUEBA DE TEXTO 1</P>
         <P class="parrafoSecundario">PRUEBA DE TEXTO 2</P>
